--- a/docs/changes.txt
+++ b/docs/changes.txt
@@ -1,6 +1,8 @@
 =-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-
     LiteStep 0.24.8
     Changelog
+    
+    Copyright (c) 2009 The LiteStep Development Team
 =-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-
 
 -- CHANGES SINCE 0.24.7 --------------------------------------------------------
@@ -32,11 +34,11 @@
    navigation bars, or Instant Messenger's contact list window.  Appbars may
    also cause the work area to be changed.
 
- - Changed bang !alert messagebox caption to "!Alert Litestep" to make apparent
+ - Changed bang !alert messagebox caption to "!Alert LiteStep" to make apparent
    what generated the messagebox.
 
- - Changed bang !confirm messagebox caption to "!Confirm Litestep" to make apparent
-   what generated the messagebox.
+ - Changed bang !confirm messagebox caption to "!Confirm LiteStep" to make
+   apparent what generated the messagebox.
 
  - Fixed error handling when encountering invalid If/ElseIf syntax.
 
@@ -49,6 +51,9 @@
    conditional to "true".
 
  - Added Win2003 platform variable.
+
+ - Added support for "Windows 2003" OS version string in the !about dialog's
+   System Information page.
 
  - Fixed semicolon following ELSE or ENDIF statement from breaking parser.
 
@@ -70,10 +75,34 @@
  - Now using DeferWindowPos in Show/Hide/ToggleModules bang commands.  This
    allows for "apparent" instant showing/hiding of all module windows.
 
- - Improvements to LSAutoHideModules.
+ - Greatly improved LSAutoHideModules support.  It now correctly detects any
+   full screen application on the primary monitor correctly and hides or shows
+   all modules accordingly (when it is enabled).
 
  - Added a more specific error message when failing to load a module because of
    unresolved dependencies.
+
+ - Fixed several Startup Runner issues.
+
+ - Fixed the Step.rc Evaluation Parser's abs() function from converting the
+   input to an integer.  Now abs(-1.23) will return 1.23 instead of 1.
+
+ - Fixed LiteStep from shutting down too early if an application blocks the
+   shutdown process which would leave the user with an empty desktop.
+
+ - Fixed !about dialog's font display under Windows 95.
+
+ - Fixed several API bugs: NULL paramater crash in RemoveBangCommand() and
+   invalid message format for LM_GETMINRECT and LM_APPCOMMAND.
+
+ - Updated German language strings.
+
+ - Updated the !about dialog's System Information page to show >2GB of memory
+   statistics if needed and to show partial gigabytes.
+
+ - Added LiteStep version resource information to hook.dll.
+
+ - Brought the VC7.1 and MinGW build files up to date.
 
  - Targeting libpng 1.2.34 and zlib 1.2.3.
 
