--- a/docs/changes.txt
+++ b/docs/changes.txt
@@ -1,6 +1,6 @@
 =-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=
                              LiteStep 0.25.0 Alpha
-                         Experimental Build 2013-07-21
+                         Experimental Build 2013-07-24
 =-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=
 
 This build requires the Visual C++ 2012 Redistributable Package
@@ -47,6 +47,10 @@ This build is the current state of that code.
 
 The following lists the changes between nightly builds.
 See the next section for a cumulative changelog since 0.24.8.
+  - [2013-07-24] -
+    - Fixed crash on !Recycle introduced in the 2013-07-21 build when
+      LSAutoHideModules was disabled initially.
+      
   - [2013-07-21] -
     - Modified the .RC file syntax to allow for settings prefixes. This change
       is backwards compatible.
