Added LM_FULLSCREENACTIVATED and LM_FULLSCREENDEACTIVATED messages.

--- a/docs/changes.txt
+++ b/docs/changes.txt
@@ -1,6 +1,6 @@
 =-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=
                              LiteStep 0.25.0 Alpha
-                         Experimental Build 2013-07-24
+                         Experimental Build 2013-07-25
 =-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=
 
 This build requires the Visual C++ 2012 Redistributable Package
@@ -47,6 +47,12 @@ This build is the current state of that code.
 
 The following lists the changes between nightly builds.
 See the next section for a cumulative changelog since 0.24.8.
+  - [2013-07-25] -
+    - Modified the .RC prefix syntax, added special handling of keys starting
+      with *, and made - refer to the current prefix.
+    - The core will now send LM_FULLSCREENACTIVATED and LM_FULLSCREENDEACTIVATED
+      to modules that have registered for those messages.
+
   - [2013-07-24] -
     - Fixed crash on !Recycle introduced in the 2013-07-21 build when
       LSAutoHideModules was disabled initially.
